// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transform record for initial CR 1`] = `
Object {
  "caseNotes": Object {
    "Recommended supervision level": Array [
      Object {
        "eventDate": null,
        "noteBody": "MEDIUM",
        "noteTitle": null,
      },
    ],
  },
  "eligibleCriteria": Object {
    "usMiClassificationReviewPastDueDate": Object {
      "eligibleDate": 2022-12-12T00:00:00.000Z,
    },
    "usMiNotAlreadyOnLowestEligibleSupervisionLevel": Object {
      "supervisionLevel": "MAXIMUM",
    },
  },
  "externalId": "cr-eligible-1",
  "stateCode": "US_MI",
}
`;

exports[`transform record for null usMiNotAlreadyOnLowestEligibleSupervisionLevel 1`] = `
Object {
  "caseNotes": undefined,
  "eligibleCriteria": Object {
    "usMiClassificationReviewPastDueDate": Object {
      "eligibleDate": 2023-03-14T00:00:00.000Z,
    },
    "usMiNotAlreadyOnLowestEligibleSupervisionLevel": Object {
      "supervisionLevel": undefined,
    },
  },
  "externalId": "cr-eligible-3",
  "stateCode": "US_MI",
}
`;

exports[`transform record for six-month CR 1`] = `
Object {
  "caseNotes": Object {
    "Recommended supervision level": Array [
      Object {
        "eventDate": null,
        "noteBody": "MEDIUM",
        "noteTitle": null,
      },
    ],
  },
  "eligibleCriteria": Object {
    "usMiClassificationReviewPastDueDate": Object {
      "eligibleDate": 2019-01-12T00:00:00.000Z,
    },
    "usMiNotAlreadyOnLowestEligibleSupervisionLevel": Object {
      "supervisionLevel": "MAXIMUM",
    },
  },
  "externalId": "cr-eligible-2",
  "stateCode": "US_MI",
}
`;
